--- a/rolling-package.toml
+++ b/rolling-package.toml
@@ -2,6 +2,40 @@ name = "client"
 
 dependencies = []
 
+base_version = [1, 0, 0, 0]
+tag_format = "client@{{MAJOR}}.{{MINOR}}.{{PATCH}}"
+version_schema = ["MAJOR", "MINOR", "PATCH", "HOTFIX"]
+
+[[change_types]]
+  id = "breaking"
+  bumps = "MAJOR"
+  plural = "Breaking Changes"
+
+[[change_types]]
+  id = "feat"
+  bumps = "MINOR"
+  plural = "New Features"
+
+[[change_types]]
+  id = "refactor"
+  bumps = "MINOR"
+  plural = "Refactors"
+
+[[change_types]]
+  id = "fix"
+  bumps = "PATCH"
+  plural = "Bug Fixes"
+
+[[change_types]]
+  id = "perf"
+  bumps = "PATCH"
+  plural = "Performance Improvements"
+
+[[change_types]]
+  id = "hotfix"
+  bumps = "HOTFIX"
+  plural = "Hotfixes"
+
 [scripts]
   prepublish = "echo prepublish $NEW_VERSION"
   publish_dry_run = "echo dryrun $NEW_VERSION"
