feat: support custom change types in config (#5)

--- a/rolling-package.toml
+++ b/rolling-package.toml
@@ -2,6 +2,53 @@ name = "client"
 
 dependencies = []
 
+base_version = [1, 0, 0, 0]
+tag_format = "client@{{MAJOR}}.{{MINOR}}.{{PATCH}}{{?-{{HOTFIX}}}}"
+version_schema = ["MAJOR", "MINOR", "PATCH", "HOTFIX"]
+
+# Versioning mode differs between hotfix branches and
+# the main branch
+
+  [[versioning_mode]]
+    branch = "main"
+    mode = "ALWAYS_INCREASING"
+
+  [[versioning_mode]]
+    branch = "hotfix/*"
+    mode = "BY_BRANCH"
+
+# We add a custom "hotfix" change type
+
+  [[change_types]]
+    id = "breaking"
+    bumps = "MAJOR"
+    plural = "Breaking Changes"
+
+  [[change_types]]
+    id = "feat"
+    bumps = "MINOR"
+    plural = "New Features"
+
+  [[change_types]]
+    id = "refactor"
+    bumps = "MINOR"
+    plural = "Refactors"
+
+  [[change_types]]
+    id = "fix"
+    bumps = "PATCH"
+    plural = "Bug Fixes"
+
+  [[change_types]]
+    id = "perf"
+    bumps = "PATCH"
+    plural = "Performance Improvements"
+
+  [[change_types]]
+    id = "hotfix"
+    bumps = "HOTFIX"
+    plural = "Hotfixes"
+
 [scripts]
   prepublish = "echo prepublish $NEW_VERSION"
   publish_dry_run = "echo dryrun $NEW_VERSION"
